# Boke

./: README.md  pyproject.toml
copier/: __init__.py  main.py
copier/adapters/: mt5_client.py
copier/core/: engine.py  models.py  service.py
copier/storage/: sqlite_store.py
copier/ui/: app.py
tests/: test_engine.py
